[metadata]
name = brabantwater_nexus
version = 0.0.3
author = Hugo Lapre
author_email = hugo.lapre@brabantwater.nl
description = Uitwisselingsformaat voor Brabant Water met Nexus
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hugovdberg/brabantwater_nexus
project_urls =
    Bug Tracker = https://github.com/Hugovdberg/brabantwater_nexus/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pydantic
    expression
    shapely

[options.packages.find]
where = src
